# ewatercycle

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  NOTICE  README.md  README.rst  codecov.yml  conda-lock.yml  demo_forcing_builder.ipynb  environment.yml  ewatercycle.yaml  new_model_api.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ci.yml  lint.yml  python-publish.yml  sonar.yml  test.yml
docs/: Makefile  adding_models.rst  conf.py  ewatercycle_api_notebook.ipynb  ewatercycle_api_notebook.rst  examples.rst  hpc_to_cluster.rst  index.rst  infrastructures.rst  introduction.rst  login.rst  make.bat  observations.rst  plugins.rst  preperation.rst  requirements.txt  system_setup.rst  user_guide.ipynb
docs/examples/: Irrigation.ipynb  MarrmotM01.ipynb  MarrmotM14.ipynb  README.md  ewatercycle_api_notebook.ipynb  generate_forcing.ipynb  hype.ipynb  lisflood.ipynb  pcrglobwb.ipynb  pcrglobwb_merrimack.ini  preprocessing.ipynb  system_setup.ipynb  wflow.ipynb
docs/hpc_to_cluster/: index.rst
docs/plugins/hype/: generate_forcing.ipynb  index.rst  model.ipynb
docs/plugins/lisflood/: generate_forcing.ipynb  index.rst  model.ipynb
docs/plugins/marrmot/: MarrmotM01.ipynb  MarrmotM14.ipynb  generate_forcing.ipynb  index.rst
docs/plugins/pcrglobwb/: Irrigation.ipynb  generate_forcing.ipynb  index.rst  model.ipynb  pcrglobwb.ipynb
docs/plugins/wflow/: generate_forcing.ipynb  index.rst  model.ipynb
docs/user_guide/: 00_intro.ipynb  01_parameter_sets.ipynb  02_forcing.ipynb  03_models_obs_analysis.ipynb
ewatercycle/: __init__.py  forcing.py  marrmot.py  util.py
ewatercycle/analysis/: __init__.py
ewatercycle/config/: __init__.py  _config_object.py  _config_validators.py  _validated_config.py  _validators.py  ewatercycle.yaml
ewatercycle/forcing/: __init__.py  _default.py  _hype.py  _lisflood.py  _marrmot.py  _pcrglobwb.py  _wflow.py  datasets.py  default.py  forcing_data.py  hype.py  lisflood.py  lisvap.py  marrmot.py  pcrglobwb.py  preprocessors.py  recipe_generator.py  wflow.py
ewatercycle/models/: __init__.py  abstract.py  lisflood.py  marrmot.py  pcrglobwb.py  wflow.py
ewatercycle/observation/: grdc.py  usgs.py
ewatercycle/parameter_sets/: __init__.py  _default.py  _example.py  _lisflood.py  _pcrglobwb.py  _wflow.py  default.py
ewatercycle/parametersetdb/: __init__.py  catalogue.py  config.py  datafiles.py
ewatercycle_parametersetdb/: __init__.py  ewatercycle_parametersetdb.py
examples/: .gitignore  Irrigation.ipynb  MarrmotM01.ipynb  MarrmotM14.ipynb  ewatercycle_api_notebook.ipynb  lisflood.ipynb  pcrglobwb.ipynb  preprocessing.ipynb  wflow.ipynb
leaky_bucket/: diagram.md  lb_utils.py  leaky_bucket.ipynb  leaky_bucket_config.json  precip.nc
src/ewatercycle/: __init__.py  _repr.py  container.py  forcing.py  model.py  models.py  parameter_set.py  parameter_sets.py  shared.py  util.py  version.py
src/ewatercycle/_forcings/: _caravan_reference.py  caravan.py  makkink.py  penman_monteith.py
src/ewatercycle/analysis/: __init__.py  discharge_statistics.py  hydrograph.py
src/ewatercycle/base/: __init__.py  esmvaltool_generic_diagnostic.py  esmvaltool_wrapper.py  forcing.py  forcing_generate.py  forcing_recipe.py  model.py  new_model.py  parameter_set.py  recipe_generic_distributed.yml
src/ewatercycle/config/: __init__.py  _config_object.py  _lisflood_versions.py  _validated_config.py  _validators.py  ewatercycle.yaml
src/ewatercycle/defaults/: bmi_handles.py  model.py
src/ewatercycle/esmvaltool/: __init__.py  builder.py  datasets.py  missing.py  models.py  output.py  run.py  schema.py  search.py
src/ewatercycle/forcing/: __init__.py  _default.py  _hype.py  _lisflood.py  _lisvap.py  _marrmot.py  _pcrglobwb.py  _wflow.py  datasets.py  utils.py
src/ewatercycle/models/: __init__.py  abstract.py  bmi_handles.py  generic_distributed.py  hype.py  lisflood.py  marrmot.py  pcrglobwb.py  wflow.py
src/ewatercycle/observation/: __init__.py  caravan.py  grdc.py  usgs.py
src/ewatercycle/parameter_sets/: __init__.py  _example.py  _lisflood.py  _pcrglobwb.py  _wflow.py  default.py  example_parameterset.py
src/ewatercycle/parametersetdb/: __init__.py  config.py  datafiles.py
src/ewatercycle/testing/: __init__.py  fake_models.py  fixtures.py  grdc.py  helpers.py
tests/: conftest.py  test_analysis.py  test_config.py  test_datafiles.py  test_ewatercycle_parametersetdb.py  test_forcing.py  test_parameter_sets.py  test_parameterset.py  test_util.py
tests/config/: test_config.py
tests/forcing/: test_constructors.py  test_default.py  test_hype.py  test_lisflood.py  test_lisvap.py  test_marrmot.py  test_pcrglobwb.py  test_update_funcs.py  test_wflow.py
tests/forcing/data/: settings_lisvap.xml
tests/models/: test_abstract.py  test_hype.py  test_lisflood.py  test_marrmotm01.py  test_marrmotm14.py  test_pcrglobwb.py  test_wflow.py
tests/observation/: test_grdc.py
tests/parameter_sets/: __init__.py  test_default_parameterset.py  test_example.py  test_lisflood.py
tests/plugins/hype/: test_forcing.py  test_model.py
tests/plugins/lisflood/: conftest.py  test_forcing.py  test_lisvap.py  test_model.py
tests/plugins/marrmot/: conftest.py  test_forcing.py  test_model_m01.py  test_model_m14.py
tests/plugins/pcrglobwb/: test_forcing.py  test_model.py
tests/plugins/wflow/: test_forcing.py  test_model.py
tests/src/: conftest.py  fake_models.py  test_analysis.py  test_analysis_hydrograph.py  test_analysis_new.py  test_container.py  test_entrypoints.py  test_parameter_sets.py  test_util.py
tests/src/base/: __init__.py  test_forcing.py  test_forcing_recipe.py  test_model.py
tests/src/config/: test_config.py
tests/src/esmvaltool/: test_builder.py  test_missing.py  test_models.py  test_run.py  (+3 more)
(+69 files in other folders)
