[metadata]
name = ewatercycle
version = 1.4.1
description = A Python package for running and validating a hydrology model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.ewatercycle.org/
author = Stefan Verhoeven
author_email = s.verhoeven@esciencecenter.nl
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Typing :: Typed
keywords =
    ewatercycle
    FAIR
    BMI
    Geoscience
project_urls =
    Bug Tracker = https://github.com/eWaterCycle/ewatercycle/issues
    Documentation = https://ewatercycle.readthedocs.io/
    Source Code = https://github.com/eWaterCycle/ewatercycle

[options]
packages = find:
install_requires =
    Fiona
    Shapely
    bmipy
    cftime
    esmvaltool>=2.4.0
    grpc4bmi>=0.4.0
    grpcio
    hydrostats
    matplotlib>=3.5.0
    numpy
    pandas
    protobuf<=3.20.1
    pydantic
    pyoos
    python-dateutil
    ruamel.yaml
    scipy
    xarray
python_requires = >=3.8
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
ewatercycle.models =
    Hype = ewatercycle.models.hype:Hype
    Lisflood = ewatercycle.models.lisflood:Lisflood
    Wflow = ewatercycle.models.wflow:Wflow
    PCRGlobWB = ewatercycle.models.pcrglobwb:PCRGlobWB
    MarrmotM01 = ewatercycle.models.marrmot:MarrmotM01
    MarrmotM14 = ewatercycle.models.marrmot:MarrmotM14

[options.extras_require]
dev =
    black[jupyter]
    build
    bump2version
    deepdiff
    ipython
    isort
    nbsphinx
    pre-commit>=2.15.0
    pycodestyle
    pytest
    pytest-cov
    pytest-mypy
    pytest-runner
    recommonmark
    sphinx
    sphinx-copybutton
    sphinx_rtd_theme
    twine
    types-python-dateutil

[options.package_data]
ewatercycle = py.typed

[coverage:run]
branch = True
source = src

[tool:pytest]
testpaths =
    tests
    src
addopts =
    --mypy
    --cov
    --cov-report xml
    --cov-report term
    --cov-report html
    --junit-xml=xunit-result.xml

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[mypy]
plugins = pydantic.mypy
ignore_missing_imports = True
files = src, tests

[flake8]
max-line-length = 88
extend-ignore = E203,S101
pytest-fixture-no-parentheses = True
per-file-ignores =
    tests/**: D100,D101,D102,D103,D104
