[metadata]
name = ewatercycle
version = 2.1.1
description = A Python package for running and validating a hydrology model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.ewatercycle.org/
author = Stefan Verhoeven
author_email = s.verhoeven@esciencecenter.nl
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Typing :: Typed
keywords =
    ewatercycle
    FAIR
    BMI
    Geoscience
project_urls =
    Bug Tracker = https://github.com/eWaterCycle/ewatercycle/issues
    Documentation = https://ewatercycle.readthedocs.io/
    Source Code = https://github.com/eWaterCycle/ewatercycle

[options]
packages = find:
install_requires =
    Fiona
    Shapely
    bmipy
    cftime>=1.6.2
    esmvaltool>=2.4.0
    gitdir
    grpc4bmi>=0.4.0
    grpcio
    hydrostats
    matplotlib>=3.5.0
    numpy
    pandas
    pydantic>=2
    pyoos
    python-dateutil
    ruamel.yaml
    scipy
    xarray
    dask
python_requires = >=3.10
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    black[jupyter]
    build
    bump2version
    deepdiff
    ipython
    isort
    mypy
    nbsphinx
    pre-commit>=2.15.0
    pycodestyle
    pytest
    pytest-cov
    pytest-runner
    rich
    recommonmark
    sphinx
    sphinx-copybutton
    sphinx-rtd-theme
    sphinx-autoapi
    twine
    types-python-dateutil
    types-PyYAML
    types-requests

[options.package_data]
ewatercycle =
    py.typed
    testing/data/Rhine/Rhine.*

[coverage:run]
branch = True
source = src

[tool:pytest]
testpaths =
    tests
    src

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[mypy]
plugins = pydantic.mypy
ignore_missing_imports = True
files = src, tests

[flake8]
max-line-length = 88
extend-ignore = E203,S101
pytest-fixture-no-parentheses = True
per-file-ignores =
    tests/**: D100,D101,D102,D103,D104
